@startuml Class_meghatarozas
'Classok a programon belül

abstract class Users {
    -fullName : string
    -dateOfBirth : string
    -address : string
    -password : string
    -codeOfUser : string
    '4 karakterből álló generátor
    +userCodeGenerator() : string
    +getFullName() : string
    +getDateOfBirth() : string
    +getAddress() : string
    +setFullName() : void
    +setDateOfBirth() : void
    +setAddress() : void
    +setPassword() : void

}

class Admin {
    +addWorker(string fullNameOfWorker, string dateOfBirth, string password, int typeOfWorker) : void
    +deleteWorker(string codeOfUser) : void
    +listWorkers() : void
    +listBuyers() : void
    +checkPassword(string codeOfUser) : string
}

class Worker {
    -typeOfWorker : int
    +PlaceofProduct() : void
    +AddProduct(name,sector,shelf,row,id) : void
    +DeleteProduct(ProductId) : void

}

class Buyer {
    -OrderCode : Order
    +getOderCode : string
    +addToBasket() : void
    +removeFromBasket(ProductId) :void
    +myBasket() : void 

   
}  

class Product {
    -name : string
    -sector : int
    -shelf : int
    -row : int
    -id : int
    #Product(name,sector,shelf,row,id)
    +getName() : string
    +getSector() : int
    +getShelf() : int
    +getRow() : int 
    +getId() : int

}

class Order {
    'legenerált random kód
    -codeOfOrder : string
    -OrderedProductId : string
    '8 karakterből álló random kód
    +codeGenerator() : string
    +getCode() : string


}

class ListOfProducts {
    -type : string
    +listProducts() : void
    +listProducts(Type) : void

}

class ListOfWorkers {
     #listOfWorkers(WorkerId) : Worker
     +listWorkers() : void
 }

class Delivery {
    - deliveryaddress : string
    - deliverycode : string
    +setDeliveryAddress() : void
    +generateDeliveryCode : string
    +getDeliveryAddress() : string
    +getDeliveryCode() : string
    +listDeliveriesByCode(deliverycode) : string
    +listDeliveriesByCountry(address) : string


}

' Kapcsolodasok a classok kozott


Users <|-- Worker
Users <|-- Buyer
Worker <|-- Admin

'Admin -- Worker
Admin -- Buyer
Admin -- Product
Admin -- ListOfProducts
Admin --o ListOfWorkers

Product o-- ListOfProducts


Buyer -- ListOfProducts
Buyer *-- Order
Buyer -- Delivery


Product -- Order

Worker -- Delivery

Worker -- Product
@enduml

